# reachy_mini_retail_assistant

./: .gitignore  README.md  agents.local.md  plan.md  pytest.ini  reachy_mini_retail_assistant.code-workspace  smoke_test.py  test_robot_backend.py
backend/: __init__.py  config.py  main.py  models.py  requirements.txt
brain_space/: README.md  README_HF.md  app.py
data/: cache.db  signals.json
demo/: HF_README.md  README.md  app.py  gradio_app.py  requirements.txt
docs/: EXAMPLE-SOP.md  PRD.md  REACHY-MINI-HARDWARE.md  UNIVERSAL-ARCHITECTURE.md  deployment-architecture..md  (+2 more)
reachy_edge/: .env.example  README.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
reachy_edge/api/: __init__.py  routes.py
reachy_edge/brain_client/: __init__.py  event_emitter.py
reachy_edge/cache/: __init__.py  l1_cache.py  l2_cache.py  schemas.py  vector_backends.py
reachy_edge/data/: cache.db  sample_products.py
reachy_edge/fsm/: __init__.py  interaction_fsm.py
reachy_edge/llm/: __init__.py  client.py  inference.py  prompt_manager.py
reachy_edge/mind/: __init__.py  dashboard.html  routes.py
reachy_edge/models/: __init__.py  events.py  interaction.py
reachy_edge/pi_client/: __init__.py  event_emitter.py
reachy_edge/robot/: __init__.py
reachy_edge/scripts/: load_products.py
reachy_edge/tests/: __init__.py  test_cache.py  test_integration.py  test_l2_cache.py  test_main.py  test_tools.py
reachy_edge/tools/: __init__.py  base.py  movement.py  product_lookup.py  promo_manager.py  selfie.py
reachy_edge/voice/: __init__.py  stt.py  tts.py
(+40 files in other folders)
